exports[`BpkChartGridLines X should render band scale 1`] = `
<g
  className="bpk-barchart__grid-lines bpk-barchart__grid-lines--x">
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={16.666666666666668}
    x2={16.666666666666668}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={50}
    x2={50}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={83.33333333333334}
    x2={83.33333333333334}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={116.66666666666667}
    x2={116.66666666666667}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={150}
    x2={150}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={183.33333333333334}
    x2={183.33333333333334}
    y2={120} />
</g>
`;

exports[`BpkChartGridLines X should render band scale with "tickEvery" and "tickOffset" attributes 1`] = `
<g
  className="bpk-barchart__grid-lines bpk-barchart__grid-lines--x">
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={50}
    x2={50}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={116.66666666666667}
    x2={116.66666666666667}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={183.33333333333334}
    x2={183.33333333333334}
    y2={120} />
</g>
`;

exports[`BpkChartGridLines X should render band scale with "tickEvery" attribute 1`] = `
<g
  className="bpk-barchart__grid-lines bpk-barchart__grid-lines--x">
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={16.666666666666668}
    x2={16.666666666666668}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={83.33333333333334}
    x2={83.33333333333334}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={150}
    x2={150}
    y2={120} />
</g>
`;

exports[`BpkChartGridLines X should render linear scale 1`] = `
<g
  className="bpk-barchart__grid-lines bpk-barchart__grid-lines--x">
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={18.947368421052634}
    x2={18.947368421052634}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={40}
    x2={40}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={61.05263157894737}
    x2={61.05263157894737}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={82.10526315789474}
    x2={82.10526315789474}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={103.15789473684211}
    x2={103.15789473684211}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={124.21052631578948}
    x2={124.21052631578948}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={145.26315789473685}
    x2={145.26315789473685}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={166.31578947368422}
    x2={166.31578947368422}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={187.3684210526316}
    x2={187.3684210526316}
    y2={120} />
</g>
`;

exports[`BpkChartGridLines X should render linear scale with "numTicks" attribute 1`] = `
<g
  className="bpk-barchart__grid-lines bpk-barchart__grid-lines--x">
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={82.10526315789474}
    x2={82.10526315789474}
    y2={120} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--x"
    x1={166.31578947368422}
    x2={166.31578947368422}
    y2={120} />
</g>
`;

exports[`BpkChartGridLines Y should render band scale 1`] = `
<g
  className="bpk-barchart__grid-lines bpk-barchart__grid-lines--y">
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={16.666666666666668}
    y2={16.666666666666668} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={50}
    y2={50} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={83.33333333333334}
    y2={83.33333333333334} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={116.66666666666667}
    y2={116.66666666666667} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={150}
    y2={150} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={183.33333333333334}
    y2={183.33333333333334} />
</g>
`;

exports[`BpkChartGridLines Y should render band scale with "tickEvery" and "tickOffset" attributes 1`] = `
<g
  className="bpk-barchart__grid-lines bpk-barchart__grid-lines--y">
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={50}
    y2={50} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={116.66666666666667}
    y2={116.66666666666667} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={183.33333333333334}
    y2={183.33333333333334} />
</g>
`;

exports[`BpkChartGridLines Y should render band scale with "tickEvery" attribute 1`] = `
<g
  className="bpk-barchart__grid-lines bpk-barchart__grid-lines--y">
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={16.666666666666668}
    y2={16.666666666666668} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={83.33333333333334}
    y2={83.33333333333334} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={150}
    y2={150} />
</g>
`;

exports[`BpkChartGridLines Y should render linear scale 1`] = `
<g
  className="bpk-barchart__grid-lines bpk-barchart__grid-lines--y">
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={18.947368421052634}
    y2={18.947368421052634} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={40}
    y2={40} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={61.05263157894737}
    y2={61.05263157894737} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={82.10526315789474}
    y2={82.10526315789474} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={103.15789473684211}
    y2={103.15789473684211} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={124.21052631578948}
    y2={124.21052631578948} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={145.26315789473685}
    y2={145.26315789473685} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={166.31578947368422}
    y2={166.31578947368422} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={187.3684210526316}
    y2={187.3684210526316} />
</g>
`;

exports[`BpkChartGridLines Y should render linear scale with "numTicks" attribute 1`] = `
<g
  className="bpk-barchart__grid-lines bpk-barchart__grid-lines--y">
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={82.10526315789474}
    y2={82.10526315789474} />
  <line
    className="bpk-barchart__grid-line bpk-barchart__grid-line--y"
    x2={120}
    y1={166.31578947368422}
    y2={166.31578947368422} />
</g>
`;
